Jenkins start script: Java-17 + en_US.UTF-8